--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous">
 
   <!-- Custom CSS file -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/css/style.css">
 <style type="text/css" id="mytempCss">._2_e-g9 { display: none; } ._2wQ56C._1h3i_z { opacity: 0.01; } </style></head>
 <body>
 
@@ -83,7 +83,7 @@
                       <!-- cart item -->
                       <div class="row border-top py-3 mt-3">
                           <div class="col-sm-2">
-                              <img src="../assets/products/1.png" style="height: 120px;" alt="cart1" class="img-fluid">
+                              <img src="../static/assets/products/1.png" style="height: 120px;" alt="cart1" class="img-fluid">
                           </div>
                           <div class="col-sm-8">
                               <h5 class="font-baloo font-size-20">Samsung Galaxy S21</h5>
@@ -125,7 +125,7 @@
                       <!-- cart item -->
                       <div class="row border-top py-3 mt-3">
                           <div class="col-sm-2">
-                              <img src="../assets/products/2.png" style="height: 120px;" alt="cart1" class="img-fluid">
+                              <img src="../static/assets/products/2.png" style="height: 120px;" alt="cart1" class="img-fluid">
                           </div>
                           <div class="col-sm-8">
                               <h5 class="font-baloo font-size-20">iPhone 13 Pro Max</h5>
@@ -199,7 +199,7 @@
                         
                       <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-920px, 0px, 0px); transition: all 0s ease 0s; width: 3450px;"><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Samsung Galaxy 10</h6>
                               <div class="rating text-warning font-size-12">
@@ -217,7 +217,7 @@
                           </div>
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -236,7 +236,7 @@
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
                             <div class="d-flex flex-column">
-                              <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                              <a href="#"><img src="../static/assets/products/1.png" class="img-fluid" alt="pro1"></a>
                               <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -256,7 +256,7 @@
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
                             <div class="d-flex flex-column">
-                              <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                              <a href="#"><img src="../static/assets/products/2.png" class="img-fluid" alt="pro1"></a>
                               <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -275,7 +275,7 @@
                           </div>
                         </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Samsung Galaxy 10</h6>
                               <div class="rating text-warning font-size-12">
@@ -293,7 +293,7 @@
                           </div>
                         </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/2.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -311,7 +311,7 @@
                           </div>
                         </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -329,7 +329,7 @@
                           </div>
                         </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Samsung Galaxy 10</h6>
                               <div class="rating text-warning font-size-12">
@@ -347,7 +347,7 @@
                           </div>
                         </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -366,7 +366,7 @@
                         </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
                             <div class="d-flex flex-column">
-                              <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                              <a href="#"><img src="../static/assets/products/1.png" class="img-fluid" alt="pro1"></a>
                               <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -386,7 +386,7 @@
                         </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
                             <div class="d-flex flex-column">
-                              <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                              <a href="#"><img src="../static/assets/products/2.png" class="img-fluid" alt="pro1"></a>
                               <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -405,7 +405,7 @@
                           </div>
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Samsung Galaxy 10</h6>
                               <div class="rating text-warning font-size-12">
@@ -423,7 +423,7 @@
                           </div>
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/2.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -441,7 +441,7 @@
                           </div>
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Readme Note 7</h6>
                               <div class="rating text-warning font-size-12">
@@ -459,7 +459,7 @@
                           </div>
                         </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2 bg-light">
                           <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                               <h6>Samsung Galaxy 10</h6>
                               <div class="rating text-warning font-size-12">
@@ -503,7 +503,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
 
   <!-- Custom Javascript -->
-  <script src="index.js"></script>
+  <script src="../static/js/index.js"></script>
 <!-- Code injected by live-server -->
 <script>
 // <![CDATA[  <-- For SVG support
