--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous">
 
   <!-- Custom CSS file -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
 <style type="text/css" id="mytempCss">._2_e-g9 { display: none; } ._2wQ56C._1h3i_z { opacity: 0.01; } </style></head>
 <body>
 
@@ -79,11 +79,11 @@
                 
                 
             <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-1618px, 0px, 0px); transition: all 0s ease 0s; width: 2428px;"><div class="owl-item" style="width: 809.091px;"><div class="item">
-                  <img src="../assets/Banner1.png" alt="Banner1">
+                  <img src="../static/assets/Banner1.png" alt="Banner1">
                 </div></div><div class="owl-item" style="width: 809.091px;"><div class="item">
-                  <img src="../assets/Banner2.png" alt="Banner2">
+                  <img src="../static/assets/Banner2.png" alt="Banner2">
                 </div></div><div class="owl-item active" style="width: 809.091px;"><div class="item">
-                  <img src="../assets/Banner1.png" alt="Banner3">
+                  <img src="../static/assets/Banner1.png" alt="Banner3">
                 </div></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots"><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot active"><span></span></button></div></div>
           </section>
         <!-- !Owl-carousel -->
@@ -104,7 +104,7 @@
                 
               <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-1150px, 0px, 0px); transition: all 0.25s ease 0s; width: 3450px;"><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Samsung Galaxy 10</h6>
                       <div class="rating text-warning font-size-12">
@@ -122,7 +122,7 @@
                   </div>
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -141,7 +141,7 @@
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/1.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -161,7 +161,7 @@
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/2.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -180,7 +180,7 @@
                   </div>
                 </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Samsung Galaxy 10</h6>
                       <div class="rating text-warning font-size-12">
@@ -198,7 +198,7 @@
                   </div>
                 </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/2.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -216,7 +216,7 @@
                   </div>
                 </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -234,7 +234,7 @@
                   </div>
                 </div></div><div class="owl-item active" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Samsung Galaxy 10</h6>
                       <div class="rating text-warning font-size-12">
@@ -252,7 +252,7 @@
                   </div>
                 </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -271,7 +271,7 @@
                 </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/1.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -291,7 +291,7 @@
                 </div></div><div class="owl-item" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/2.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -310,7 +310,7 @@
                   </div>
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Samsung Galaxy 10</h6>
                       <div class="rating text-warning font-size-12">
@@ -328,7 +328,7 @@
                   </div>
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/2.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -346,7 +346,7 @@
                   </div>
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Readme Note 7</h6>
                       <div class="rating text-warning font-size-12">
@@ -364,7 +364,7 @@
                   </div>
                 </div></div><div class="owl-item cloned" style="width: 230px;"><div class="item py-2">
                   <div class="product font-rale">
-                    <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                    <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
                     <div class="text-center">
                       <h6>Samsung Galaxy 10</h6>
                       <div class="rating text-warning font-size-12">
@@ -401,7 +401,7 @@
               <div class="grid-item Apple border" style="position: absolute; left: 0px; top: 0px;">
                <div class="item py-2" style="width: 200px;">
                 <div class="product font-rale">
-                  <a href="#"><img src="../assets/products/13.png" alt="product1" class="img-fluid"></a>
+                  <a href="#"><img src="../static/assets/products/13.png" alt="product1" class="img-fluid"></a>
                   <div class="text-center">
                     <h6>Apple iPhone 10</h6>
                     <div class="rating text-warning font-size-12">
@@ -422,7 +422,7 @@
               <div class="grid-item Samsung border" style="position: absolute; left: 221.018px; top: 0px;">
                 <div class="item py-2" style="width: 200px;">
                  <div class="product font-rale">
-                   <a href="#"><img src="../assets/products/11.png" alt="product1" class="img-fluid"></a>
+                   <a href="#"><img src="../static/assets/products/11.png" alt="product1" class="img-fluid"></a>
                    <div class="text-center">
                      <h6>Samsung Galaxy 10</h6>
                      <div class="rating text-warning font-size-12">
@@ -443,7 +443,7 @@
                <div class="grid-item Redmi border" style="position: absolute; left: 442.036px; top: 0px;">
                 <div class="item py-2" style="width: 200px;">
                  <div class="product font-rale">
-                   <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                   <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
                    <div class="text-center">
                      <h6>Redmi Note 7 Pro</h6>
                      <div class="rating text-warning font-size-12">
@@ -464,7 +464,7 @@
                <div class="grid-item Apple border" style="position: absolute; left: 0px; top: 350.787px;">
                 <div class="item py-2" style="width: 200px;">
                  <div class="product font-rale">
-                   <a href="#"><img src="../assets/products/14.png" alt="product1" class="img-fluid"></a>
+                   <a href="#"><img src="../static/assets/products/14.png" alt="product1" class="img-fluid"></a>
                    <div class="text-center">
                      <h6>Apple iPhone 10</h6>
                      <div class="rating text-warning font-size-12">
@@ -485,7 +485,7 @@
                <div class="grid-item Samsung border" style="position: absolute; left: 221.018px; top: 350.787px;">
                 <div class="item py-2" style="width: 200px;">
                  <div class="product font-rale">
-                   <a href="#"><img src="../assets/products/12.png" alt="product1" class="img-fluid"></a>
+                   <a href="#"><img src="../static/assets/products/12.png" alt="product1" class="img-fluid"></a>
                    <div class="text-center">
                      <h6>Samsung Galaxy 10</h6>
                      <div class="rating text-warning font-size-12">
@@ -507,7 +507,7 @@
                 <div class="item py-2" style="width: 200px;">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/4.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/4.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Redmi Note 7 Pro</h6>
                         <div class="rating text-warning font-size-12">
@@ -530,7 +530,7 @@
                 <div class="item py-2" style="width: 200px;">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/5.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/5.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Redmi Note 7 Pro</h6>
                         <div class="rating text-warning font-size-12">
@@ -553,7 +553,7 @@
                 <div class="item py-2" style="width: 200px;">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/6.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/6.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Redmi Note 7 Pro</h6>
                         <div class="rating text-warning font-size-12">
@@ -576,7 +576,7 @@
                 <div class="item py-2" style="width: 200px;">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/10.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/10.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Redmi Note 7 Pro</h6>
                         <div class="rating text-warning font-size-12">
@@ -599,7 +599,7 @@
                 <div class="item py-2" style="width: 200px;">
                   <div class="product font-rale">
                     <div class="d-flex flex-column">
-                      <a href="#"><img src="../assets/products/13.png" class="img-fluid" alt="pro1"></a>
+                      <a href="#"><img src="../static/assets/products/13.png" class="img-fluid" alt="pro1"></a>
                       <div class="text-center">
                         <h6>Apple iPhone 10</h6>
                         <div class="rating text-warning font-size-12">
@@ -662,7 +662,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
 
   <!-- Custom Javascript -->
-  <script src="index.js"></script>
+  <script src="../static/js/index.js"></script>
 <!-- Code injected by live-server -->
 <script>
 // <![CDATA[  <-- For SVG support
