--- a/templates/product.html
+++ b/templates/product.html
@@ -77,13 +77,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
-                            <img src="../static/assets/products/1.png" alt="product" class="img-fluid">
+                            <img src="../assets/products/1.png" alt="product" class="img-fluid">
                             <div class="form-row pt-4 font-size-16 font-baloo">
                                 <div class="col">
-                                    <button id="buy_now" type="submit" class="btn btn-danger form-control">Proceed to Buy</button>
+                                    <button type="submit" class="btn btn-danger form-control">Proceed to Buy</button>
                                 </div>
                                 <div class="col">
-                                    <button id="add_cart" type="submit" class="btn btn-warning form-control">Add to Cart</button>
+                                    <button type="submit" class="btn btn-warning form-control">Add to Cart</button>
                                 </div>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                   
                 <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-363px, 0px, 0px); transition: all 0s ease 0s; width: 1364px;"><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Samsung Galaxy 10</h6>
                         <div class="rating text-warning font-size-12">
@@ -250,7 +250,7 @@
                     </div>
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -259,7 +259,7 @@
                           <span><i class="fas fa-star"></i></span>
                           <span><i class="fas fa-star"></i></span>
                           <span><i class="far fa-star"></i></span>
-                         </div>
+                        </div>
                         <div class="price py-2">
                           <span>₹152</span>
                         </div>
@@ -269,7 +269,7 @@
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
                       <div class="d-flex flex-column">
-                        <a href="#"><img src="../static/assets/products/11.png" class="img-fluid" alt="pro1"></a>
+                        <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
                         <div class="text-center">
                           <h6>Readme Note 7</h6>
                           <div class="rating text-warning font-size-12">
@@ -289,7 +289,7 @@
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
                       <div class="d-flex flex-column">
-                        <a href="#"><img src="../static/assets/products/14.png" class="img-fluid" alt="pro1"></a>
+                        <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
                         <div class="text-center">
                           <h6>Readme Note 7</h6>
                           <div class="rating text-warning font-size-12">
@@ -308,7 +308,7 @@
                     </div>
                   </div></div><div class="owl-item active" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/1.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Samsung Galaxy 10</h6>
                         <div class="rating text-warning font-size-12">
@@ -326,7 +326,7 @@
                     </div>
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/2.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -344,7 +344,7 @@
                     </div>
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -362,7 +362,7 @@
                     </div>
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Samsung Galaxy 10</h6>
                         <div class="rating text-warning font-size-12">
@@ -380,7 +380,7 @@
                     </div>
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/4.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -399,7 +399,7 @@
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
                       <div class="d-flex flex-column">
-                        <a href="#"><img src="../static/assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                        <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
                         <div class="text-center">
                           <h6>Readme Note 7</h6>
                           <div class="rating text-warning font-size-12">
@@ -419,7 +419,7 @@
                   </div></div><div class="owl-item" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
                       <div class="d-flex flex-column">
-                        <a href="#"><img src="../static/assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                        <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
                         <div class="text-center">
                           <h6>Readme Note 7</h6>
                           <div class="rating text-warning font-size-12">
@@ -438,7 +438,7 @@
                     </div>
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Samsung Galaxy 10</h6>
                         <div class="rating text-warning font-size-12">
@@ -456,7 +456,7 @@
                     </div>
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/8.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -474,7 +474,7 @@
                     </div>
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/3.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Readme Note 7</h6>
                         <div class="rating text-warning font-size-12">
@@ -492,7 +492,7 @@
                     </div>
                   </div></div><div class="owl-item cloned" style="width: 90.909px;"><div class="item py-2">
                     <div class="product font-rale">
-                      <a href="#"><img src="../static/assets/products/6.png" alt="product1" class="img-fluid"></a>
+                      <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
                       <div class="text-center">
                         <h6>Samsung Galaxy 10</h6>
                         <div class="rating text-warning font-size-12">
